base/auth/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  template:
    spec:
      containers:
      - name: auth
        image: authImage
      - name: api
        $patch: delete
      initContainers: null
      volumes: null
