base/auth/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: auth
spec:
  rules:
  - host: $(AUTH_API_HOSTNAME)
    http:
      paths:
      - path: /
        backend:
          serviceName: api
          servicePort: 80
